# logger_benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  platformlab.patch  run_all.py
benchmarks/: CMakeLists.txt
benchmarks/call_site_latency/: CMakeLists.txt  benchmark_g3log_call_site_latency.cpp  benchmark_iyengar_nanolog_call_site_latency.cpp  benchmark_ms_binlog_call_site_latency.cpp  benchmark_platformlab_nanolog_call_site_latency.cpp  benchmark_quill_call_site_latency.cpp  benchmark_quill_dual_mode_bounded_call_site_latency.cpp  benchmark_quill_dual_mode_unbounded_call_site_latency.cpp  benchmark_quill_no_dual_mode_unbounded_call_site_latency.cpp  benchmark_reckless_call_site_latency.cpp  benchmark_spdlog_call_site_latency.cpp  benchmark_xtr_call_site_latency.cpp  call_site_latency_bench.h  call_site_latency_bench_common.h
